test/fail/issue2281.mo
do {
  let () = (true, false);
};
do {
  let (_,_) = (true, false, true);
};
